fixed flickering upon tapping on touch devices

--- a/src/Stylesheets/index.css
+++ b/src/Stylesheets/index.css
@@ -7,3 +7,7 @@ body {
   background-color: black;
   color: white;
 }
+
+div {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
